# Tej-Person-of-Interest

./: .env  .gitignore  README.md  config.yaml  faceDetector.py  kaggle.json  mkdocs.yml  person-of-interest.py  pyproject.toml  requirements.txt
